k8s/create/create-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: create-deployment
  namespace: p-spring-create
  labels:
    app: create-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: create-product
  template:
    metadata:
      labels:
        app: create-product
    spec:
      nodeSelector:
        workload: create
      containers:
        - name: create-container
          image: angiediazz/p-spring-create:latest
          ports:
            - containerPort: 8080
