k8s/create/create-service.yml
apiVersion: v1
kind: Service
metadata:
  name: create-service
  namespace: p-spring-create
  labels:
    app: create-product
spec:
  selector:
    app: create-product
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  type: ClusterIP
